2004-10-26  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/Makefile.am (guilegnomelib_LTLIBRARIES): Install to
	versioned directory.

2004-10-16  Andy Wingo  <wingo@pobox.com>

	* package.ac: Up required version of libgnomeui to 2.8.0.

2004-10-14  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/Makefile.am: Dist/install type overrides.

	* gnome/overrides/ui.defs: Adjust to ignore deprecated API.

	* gnome/overrides/ui.defs-type-ignores: New file. Overrides
	GnomeAppBar->GNOME_APPBAR, ignores deprecated types.

	* Makefile.am:
	* guile-gnome-libgnomeui-uninstalled.pc.in: 
	* guile-gnome-libgnomeui.pc.in:
	* files.ac: Add pkg-config files.

2004-09-27  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/ui.defs: Ignore href_construct and
	entry_construct, they have never been implemented.

2004-09-26  Andy Wingo  <wingo@pobox.com>

	* gnome/Makefile.am (guilemodule_DATA): Install to the proper
	directory.

2004-09-19  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/Makefile.am (libgw_guile_gnome_libgnomeui_la_LIBADD):
	Not G_WRAP_LINK_ARGS, it's G_WRAP_LIBS.

2004-09-16  Andy Wingo  <wingo@pobox.com>

	* Makefile.am (SUBDIRS): Dist fixes.

	* README: Added.

	* NEWS: Added.

	* AUTHORS: Added.

	* gtk-checks.ac: Check the right package.

	* glib-checks.ac: Check the right package.

2004-09-12  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/ui.defs, gnome/overrides/Makefile.am: Add
	overrides.

	* gnome/Makefile.am: Dist fixes, add overrides.

	* gnome/gw/libgnomeui-spec.scm (initialize): Adapted to module
	name changes, load-defs-with-overrides, real keywords.

	* gnome/gw/Makefile.am
	(nodist_libgw_guile_gnome_libgnomeui_la_SOURCES): Don't dist the
	g-wrap generated C file.

2004-08-06  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/Makefile.am: Distribute and install gnome-ui.scm.

2004-07-01  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/libgnomeui-spec.scm (initialize): Fix for depends-on!.

	* gnome/gw/gnome-ui-spec.scm, gnome/gw/Makefile.am: Reverted