@@ -1,1 +1,1 @@
-PKG_CHECK_MODULES(GUILE_GNOME_DEFS, guile-gnome-defs)
+PKG_CHECK_MODULES(GUILE_GNOME_DEFS, guile-gnome-defs-$API_VERSION)
