@@ -1,3 +1,3 @@
-PKG_CHECK_MODULES(GUILE_GTK, guile-gnome-gtk)
+PKG_CHECK_MODULES(GUILE_GTK, guile-gnome-gtk-$API_VERSION)
 AC_SUBST(GUILE_GTK_CFLAGS)
 AC_SUBST(GUILE_GTK_LIBS)
