@@ -1,3 +1,12 @@
+2004-10-28  Andy Wingo  <wingo@pobox.com>
+
+	* guile-gnome-libgnomeui.pc.in (Requires): 
+	* guile-gnome-libgnomeui-uninstalled.pc.in (Requires): Require
+	* glib-checks.ac: 
+	* defs-checks.ac: Versioned pkg-config checks.
+
+	* Makefile.am (all-local): Versioned pkg-config files.
+
 2004-10-26  Andy Wingo  <wingo@pobox.com>
 
 	* gnome/gw/Makefile.am (guilegnomelib_LTLIBRARIES): Install to
